--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android_intents"
+    package="com.obriand.android_intents"
     android:versionCode="1"
     android:versionName="1.0" >
 
